--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "okeanos",
-    "homepage": "https://okeanos-0.github.io/okeanos/",
+    "homepage": "https://okeanos-0.github.io/okeanos",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
